Refatoração de Session, tirando User e colocando Mentor e Mentorado