@@ -4,8 +4,11 @@ import br.edu.ufape.plataforma.mentoria.dto.SessionDTO;
 import br.edu.ufape.plataforma.mentoria.exceptions.EntityNotFoundException;
 
 import br.edu.ufape.plataforma.mentoria.mapper.SessionMapper;
+import br.edu.ufape.plataforma.mentoria.model.Mentor;
+import br.edu.ufape.plataforma.mentoria.model.Mentored;
 import br.edu.ufape.plataforma.mentoria.model.Session;
-import br.edu.ufape.plataforma.mentoria.model.User;
+import br.edu.ufape.plataforma.mentoria.repository.MentorRepository;
+import br.edu.ufape.plataforma.mentoria.repository.MentoredRepository;
 import br.edu.ufape.plataforma.mentoria.repository.SessionRepository;
 import br.edu.ufape.plataforma.mentoria.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,7 +16,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class SessionService {
@@ -26,6 +28,12 @@ public class SessionService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private MentorRepository mentorRepository;
+
+    @Autowired
+    private MentoredRepository mentoredRepository;
+
     public Session getSessionById(Long id) {
         return sessionRepository.findById(id)
                 .orElseThrow(() ->  new EntityNotFoundException(Session.class, id));
@@ -33,20 +41,18 @@ public class SessionService {
 
     public Session createSession(SessionDTO sessionDTO) {
 
-        User user = userRepository.findById(sessionDTO.getUserId())
-                .orElseThrow(() -> new EntityNotFoundException("Usuário com o ID " + sessionDTO.getUserId() + " não encontrado."));
+        Mentor mentor = mentorRepository.findById(sessionDTO.getMentorId())
+                .orElseThrow(() -> new EntityNotFoundException("Mentor com o ID " + sessionDTO.getMentorId() + " não encontrado."));
 
-        User guest = userRepository.findById(sessionDTO.getGuestId())
-                .orElseThrow(() -> new EntityNotFoundException("Convidado com o ID " + sessionDTO.getGuestId() + " não encontrado."));
+        Mentored mentored = mentoredRepository.findById(sessionDTO.getMentoredID())
+                .orElseThrow(() -> new EntityNotFoundException("Mentorado com o ID " + sessionDTO.getMentoredID() + " não encontrado."));
 
-        if( user.getId().equals(guest.getId())) {
-            throw new IllegalArgumentException("Usuário e convidado não podem ser a mesma pessoa.");
+        if(mentor.getId().equals(mentored.getId())) {
+            throw new IllegalArgumentException("Mentor e Mentorado não podem ser a mesma pessoa.");
         }
-
         Session session = sessionMapper.toEntity(sessionDTO);
-        session.setUser(user);
-        session.setGuest(guest);
-
+        session.setMentor(mentor);
+        session.setMentored(mentored);
 
         return sessionRepository.save(session);
     }
@@ -61,8 +67,8 @@ public class SessionService {
 
         // Definir o ID e os usuários do Sessão existente
         sessionToUpdate.setId(existingSession.getId());
-        sessionToUpdate.setUser(existingSession.getUser());
-        sessionToUpdate.setGuest(existingSession.getGuest());
+        sessionToUpdate.setMentor(existingSession.getMentor());
+        sessionToUpdate.setMentored(existingSession.getMentored());
 
         // Salvar a sessão atualizada
         Session updatedSession = sessionRepository.save(sessionToUpdate);
@@ -75,36 +81,43 @@ public class SessionService {
         sessionRepository.delete(session);
     }
 
-
     public SessionDTO getSessionDTOById(Long id) {
         Session session = getSessionById(id);
         return sessionMapper.toDTO(session);
     }
 
-    public List<SessionDTO> findSessionHistoryBetweenUsers(Long userId1, Long userId2) {
-        User user1 = userRepository.findById(userId1)
-                .orElseThrow(() -> new EntityNotFoundException("Usuário com o ID " + userId1 + " não encontrado."));
+    public List<SessionDTO> findSessionHistoryBetweenUsers(Long mentorId, Long mentoredId) {
+        Mentor mentor = mentorRepository.findById(mentorId)
+                .orElseThrow(() -> new EntityNotFoundException("Mentor com o ID " + mentorId + " não encontrado."));
 
-        User user2 = userRepository.findById(userId2)
-                .orElseThrow(() -> new EntityNotFoundException("Usuário com o ID " + userId2 + " não encontrado."));
-        List<Session> sessions = sessionRepository.findByUserAndGuestOrUserAndGuest(user1, user2, user2, user1);
+        Mentored mentored = mentoredRepository.findById(mentoredId)
+                .orElseThrow(() -> new EntityNotFoundException("Mentorado com o ID " + mentoredId + " não encontrado."));
+
+        List<Session> sessions = sessionRepository.findByMentorIdAndMentoredId(mentorId, mentoredId);
 
         return sessions.stream().
                 map(sessionMapper::toDTO).
                 collect(Collectors.toList());
     }
 
-    public List<SessionDTO> findSessionHistoryUser(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("Usuário com o ID " + userId + " não encontrado."));
+    public List<SessionDTO> findSessionHistoryMentor(Long mentorId) {
+        Mentor mentor = mentorRepository.findById(mentorId)
+                .orElseThrow(() -> new EntityNotFoundException("Mentor com o ID " + mentorId + " não encontrado."));
 
-        List<Session> sessionUser = sessionRepository.findByUserId(user.getId());
-        List<Session> sessionGuest = sessionRepository.findByGuestId(user.getId());
+        List<Session> sessions = sessionRepository.findByMentorId(mentorId);
 
-        List<Session> sessoesJuntas = Stream.concat(sessionUser.stream(), sessionGuest.stream())
-                .toList();
+        return sessions.stream().
+                map(sessionMapper::toDTO).
+                collect(Collectors.toList());
+    }
 
-        return sessoesJuntas.stream().
+    public List<SessionDTO> findSessionHistoryMentored(Long mentoredId) {
+        Mentored mentored = mentoredRepository.findById(mentoredId)
+                .orElseThrow(() -> new EntityNotFoundException("Mentorado com o ID " + mentoredId + " não encontrado."));
+
+        List<Session> sessions = sessionRepository.findByMentoredId(mentoredId);
+
+        return sessions.stream().
                 map(sessionMapper::toDTO).
                 collect(Collectors.toList());
     }
